# openvpn-gui-rust

./: .gitignore  Cargo.toml  configure.ac
.github/workflows/: msbuild.yml
res/: openvpn-gui-res-fr.rc
src/: config_parser.rs  gui.rs  main.rs  manage.rs  misc.rs  openvpn.rs  options.rs
